@@ -1,10 +1,8 @@
 ## Makefile.am for the TeX Live subdirectory utils/m-tx/
 ##
-## Copyright (C) 2012, 2013 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2012-2014 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
-ACLOCAL_AMFLAGS = -I ../../m4
-
 ## We want to re-distribute the whole original mtx source tree.
 EXTRA_DIST = $(MTX_TREE)
 ## Patches applied to the original source tree
@@ -54,7 +52,7 @@ prepmx_SOURCES = \
 
 ## We can not use @MTX_TREE@/libp2c/p2clib.c (multiple definitions).
 
-dist_man1_MANS = m-tx.1 prepmx.1
+dist_man1_MANS = prepmx.1
 
 ## Tests
 ##
