@@ -1,3 +1,8 @@
+2014-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* pmx2pdf.1 (removed): Maintained under Mastr, not here.
+	* Makefile.am: Adjusted.
+
 2013-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Import pmx-2.7.0.
